--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
   background: #efefbb;
-  background: linear-gradient(to right, #d4d3dd, #efefbb);
+  background: linear-gradient(to right, #5c4fef, #f2f24c);
   font-family: 'Lato', sans-serif;
   display: flex;
   flex-direction: column;
